# problem-manager-bot

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: authors.rs  chat.rs  commands.rs  focus.rs  loader.rs  main.rs  personal.rs  problem.rs  scanner.rs  sheets.rs
