[package]
name = "problem_manager_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
clap = { version = "4", features = ["derive"] }
gcp_auth = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
